Se creó backend y front de crear reserva, se añadio funcionalidad a los botones del navbar. Cambios varios.

--- a/src/main/webapp/historialdereservas.html
+++ b/src/main/webapp/historialdereservas.html
@@ -20,7 +20,7 @@
               integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
               crossorigin="anonymous" />
 
-        
+        <script src="js/main.js"></script>
         <script src="js/historialdereserva.js"></script>
         <link rel="icon" href= "img/apartamento.png"/>
         <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
@@ -55,30 +55,20 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                            <a id="boton-inicio" class="nav-link active" aria-current="page" href="#">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Reserva</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Modifica</a>
+                            <a id="boton-crear-reserva" class="nav-link" href="#">Crear Reserva</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Elimina</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Historial</a>
+                            <a id="boton-historial-de-reservas" class="nav-link" href="#">Historial de reservas</a>
 
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Cerrar Sesión</a>
+                            <a id="boton-cerrar-sesion" class="nav-link" href="#">Cerrar Sesión</a>
                         </li>
-
-
 
                     </ul>
 
