--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -16,6 +16,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
         <link rel="icon" href= "img/apartamento.png"/>
         <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
          <script src="js/index.js"></script>
+         <script src="js/main.js"></script>
     </head>
     <body>
         
