--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -14,6 +14,8 @@
 
         <!-- Latest compiled JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        
+        <script src="js/main.js"></script>
         <script src="js/index.js"></script>
         <link href="css/estilos.css" rel="stylesheet">
         <link rel="icon" href= "img/apartamento.png"/>
@@ -45,32 +47,22 @@
 
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                            <a id="boton-inicio" class="nav-link active" aria-current="page" href="#">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Reserva</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Modifica</a>
+                            <a id="boton-crear-reserva" class="nav-link" href="#">Crear Reserva</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Elimina</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Historial</a>
+                            <a id="boton-historial-de-reservas" class="nav-link" href="#">Historial de reservas</a>
 
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Cerrar Sesión</a>
+                            <a id="boton-cerrar-sesion" class="nav-link" href="#">Cerrar Sesión</a>
                         </li>
-
-
 
                     </ul>
 
