Se implementó login, eliminar reserva, modificar reserva, cerrar sesion,

--- a/src/main/webapp/crearreserva.html
+++ b/src/main/webapp/crearreserva.html
@@ -19,7 +19,7 @@
         <script src="js/crearreserva.js"></script>
         <link href="css/estilos.css" rel="stylesheet">
         <link rel="icon" href= "img/apartamento.png"/>
-        <title>reserva - crear reserva salon social </title>
+        <title>Reserva - crear reserva de salon social </title>
     </head>
     <body>
         <!--   Inicio de Header     -->
@@ -39,8 +39,8 @@
 
 
 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent"
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#navbarSupportedContent"
                         aria-controls="navbarSupportedContent" aria-expanded="false"
                         aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
