--- a/src/main/webapp/modificarreserva.html
+++ b/src/main/webapp/modificarreserva.html
@@ -1,9 +1,7 @@
-
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Mi perfil</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -18,11 +16,13 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
         
         <script src="js/main.js"></script>
-        <script src="js/perfil.js"></script>
-        <link rel="stylesheet" href="css/estilos.css" />
+        <script src="js/modificarreserva.js"></script>
+        <link href="css/estilos.css" rel="stylesheet">
         <link rel="icon" href= "img/apartamento.png"/>
+        <title>Reserva - Modificar reserva salon social </title>
     </head>
     <body>
+        <!--   Inicio de Header     -->
         <header>
             <div class="container-fluid p-5 container-fluid p-5 bg-info text-white text-center">
                 <h1> Reserva tu espacio App</h1>  
@@ -47,7 +47,7 @@
 
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a id="boton-inicio" class="nav-link active" aria-current="page" href="#">Inicio</a>
                         </li>
@@ -69,64 +69,49 @@
                 </div>
             </div>
         </nav>
+        <!--   Fin de Header     -->
 
         <main class="container">
             <div class="row">
                 <div class="col-12">
-                    <h1 class="mt-3">Editar perfil</h1>
-                    <div class="card mb-4" id="form-container">
+                    <h1 class="mt-3">Modificar Reserva</h1>
+                    <div class="card sizeDiv mb-4">
                         <div class="card-body">
-                            <form method="GET" id="form-modificar" class="pb-4">
-                                <div class="form-group">
-                                    <label for="input-idusuario">Id Usuario</label>
-                                    <input type="text" class="form-control disabled" id="input-idusuario" placeholder="Id Usuario" readonly>
-                                </div>
-                                <div class="form-group">
-                                    <label for="input-contrasena">Password</label>
-                                    <input type="password" class="form-control" id="input-contrasena" placeholder="Password" required>
-                                </div>
-                                <div class="form-group">
-                                    <label for="input-nombre">Nombre</label>
-                                    <input type="text" class="form-control" id="input-nombre" placeholder="Nombre" required>
-                                </div>
-                                
-                                <div class="form-group">
-                                    <label for="input-nombre">Apellidos</label>
-                                    <input type="text" class="form-control" id="input-apellidos" placeholder="Apellidos" required>
-                                </div>
+                            <form id="form-modificar-reserva" class="pb-4">
+
 
                                 <div class="form-group">
-                                    <label for="input-cedula">Cedula</label>
-                                    <input type="text" class="form-control" id="input-cedula" placeholder="Cedula" required>
+                                    <label for="input-idusuario">Usuario</label>
+                                    <input type="text" class="form-control disabled" id="input-idusuario" placeholder="Usuario" required readonly>
                                 </div>
                                 <div class="form-group">
-                                    <label for="input-numerodetelefono">Numero de telefono</label>
-                                    <input type="text" class="form-control" id="input-numerodetelefono" placeholder="Numero de telefono" required>
+                                    <label for="input-fecha">Fecha</label>
+                                    <input type="date" class="form-control" id="input-fecha" placeholder="Fecha" required>
                                 </div>
                                 <div class="form-group">
-                                    <label for="input-email">Email</label>
-                                    <input type="text" class="form-control" id="input-email" placeholder="Email" required>
+                                    <label for="input-horario">Horario</label>
+                                    <select class="custom-select" name="input-horario" id="input-horario">
+                                        <option value="1">Mañana</option>
+                                        <option value="2">Tarde</option>
+                                        <option value="3">Noche</option>
+                                    </select>
                                 </div>
                                 <div class="form-group">
-                                    <label for="input-torre">Torre</label>
-                                    <input type="text" class="form-control" id="input-torre" placeholder="Torre" required>
+                                    <label for="input-salonsocial">Salon social</label>
+                                    <select class="custom-select" name="input-salonsocial" id="input-salonsocial">
+                                    </select>
                                 </div>
-                                <div class="form-group">
-                                    <label for="input-apartamento">Apartamento</label>
-                                    <input type="text" class="form-control" id="input-apartamento" placeholder="Apartamento" required>
-                                </div>
-
-                                <button type="submit" class="btn btn-primary" id="modificar-btn">Guardar datos</button>
+                                <input id="input-idreserva" type="hidden" value="">
+                                <button type="submit" class="btn btn-primary" id="modificar-reserva-btn">Modificar reserva</button>
                             </form>
-                            <div class="alert alert-danger d-none" id="modificar-error" role="alert">
-                                Error en la modificacaciÃ³n de los datos del usuario
+                            <div class="alert alert-danger d-none" id="modificar-error" role="alert">  
+                                Hubo un error al modificar la reserva
                             </div>
                             <div id="modificar-exito" class="alert alert-success d-none" role="alert">
-                                ModificaciÃ³n de los datos del usuario realizada correctamente
+                                Reserva modificada exitosamente!
                             </div>
                         </div>
-
-                    </div>
+                    </div> 
                 </div>
             </div>
         </main>
