--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -39,8 +39,8 @@
 
 
 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent"
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#navbarSupportedContent"
                         aria-controls="navbarSupportedContent" aria-expanded="false"
                         aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -49,21 +49,8 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a id="boton-inicio" class="nav-link active" aria-current="page" href="#">Inicio</a>
+                            <a id="boton-login" class="nav-link active" aria-current="page" href="#">Inicio de Sesión</a>
                         </li>
-                        <li class="nav-item">
-                            <a id="boton-crear-reserva" class="nav-link" href="#">Crear Reserva</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a id="boton-historial-de-reservas" class="nav-link" href="#">Historial de reservas</a>
-
-                        </li>
-
-                        <li class="nav-item">
-                            <a id="boton-cerrar-sesion" class="nav-link" href="#">Cerrar Sesión</a>
-                        </li>
-
                     </ul>
 
                 </div>
